other/m-q/only-trustworthy-registries-set-root/99-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: only-trustworthy-registries-set-root
commands:
- command: kubectl delete all --all --force --grace-period=0 -n trust-registry-ns
