other/m-q/only-trustworthy-registries-set-root/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: only-trustworthy-registries-set-root
  resources:
  - name: pod-with-root-user
    values:
      request.operation: UPDATE
  rules:
  - name: only-allow-trusted-images
    values:
      imageData.configData.config.User: root
      imageData.registry: ghcr.io
